Implement basic registration functionality

--- a/MedioClinic/Views/Account/Register.cshtml
+++ b/MedioClinic/Views/Account/Register.cshtml
@@ -12,6 +12,7 @@
                     <h4>Register</h4>
                     <p>
                         <a href="@Url.Action("SignIn", "Account")" class="kn-smaller">Already registered?</a>
+                        @* TODO: Style error messages *@
                         @Html.ValidationSummary()
                         <div class="row kn-row-margin">
                             <div class="input-field col s6">
