--- a/MedioClinic/Views/Shared/_Layout.cshtml
+++ b/MedioClinic/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using System.Threading
 @using System.Web.Optimization
+@using System.Security.Claims;
 
 @model MedioClinic.Models.PageViewModel
 
@@ -47,30 +48,61 @@
                     }
                 </ul>
             }
-            <ul class="right hide-on-med-and-down">
-                @foreach (var menuItem in Model.MenuItems)
-                {
-                    if (ViewContext.RouteData.Values["controller"]?.ToString().Equals(menuItem.Controller, StringComparison.OrdinalIgnoreCase) ?? false)
+
+            @if (Context.User.Identity.IsAuthenticated)
+            {
+                <ul id="user-account" class="dropdown-content">
+                    <li><a href="@Url.Action("Profile", "Account")">Profile</a></li>
+                    <li><a href="@Url.Action("Signout", "Account")">Sign out</a></li>
+                </ul>
+            }
+            else
+            {
+                <ul id="user-account" class="dropdown-content">
+                    <li><a href="@Url.Action("Register", "Account")">Register</a></li>
+                    <li><a href="@Url.Action("Signin", "Account")">Sign in</a></li>
+                </ul>
+            }
+                <ul class="right hide-on-med-and-down">
+                    @foreach (var menuItem in Model.MenuItems)
                     {
-                        <li class="kn-bold">
-                            <a href="@Url.Action(menuItem.Action, menuItem.Controller)">@menuItem.Caption</a>
+                        if (ViewContext.RouteData.Values["controller"]?.ToString().Equals(menuItem.Controller, StringComparison.OrdinalIgnoreCase) ?? false)
+                        {
+                            <li class="kn-bold">
+                                <a href="@Url.Action(menuItem.Action, menuItem.Controller)">@menuItem.Caption</a>
+                            </li>
+                        }
+                        else
+                        {
+                            <li>
+                                <a href="@Url.Action(menuItem.Action, menuItem.Controller)">@menuItem.Caption</a>
+                            </li>
+                        }
+                    }
+                    <li>
+                        <a class="dropdown-trigger" href="#" data-target="langs">
+                            @Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName
+                            <i class="fas fa-globe-africa right"></i>
+                        </a>
+                    </li>
+                    @if (Context.User.Identity.IsAuthenticated)
+                    {
+                        <li>
+                            <a class="dropdown-trigger" href="#" data-target="user-account">
+                                @Html.Raw(User.Identity.Name)
+                                <i class="fas fa-user-circle right"></i>
+                            </a>
                         </li>
                     }
                     else
                     {
                         <li>
-                            <a href="@Url.Action(menuItem.Action, menuItem.Controller)">@menuItem.Caption</a>
+                            <a class="dropdown-trigger" href="#" data-target="user-account">
+                                <i class="fas fa-user-circle right"></i>
+                            </a>
                         </li>
                     }
-                }
-
-                <li>
-                    <a class="dropdown-trigger" href="#" data-target="langs">
-                        @Thread.CurrentThread.CurrentCulture.TwoLetterISOLanguageName
-                        <i class="fas fa-globe-africa right"></i>
-                    </a>
-                </li>
-            </ul>
+                </ul>
             <ul id="nav-mobile" class="sidenav">
                 @foreach (var menuItem in Model.MenuItems)
                 {
