--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -1,8 +1,8 @@
 ﻿@using MedioClinic.Models.Account
 
-@model MedioClinic.Models.PageViewModel<RegisterViewModel>
+@model MedioClinic.Models.PageViewModel<ResetPasswordViewModel>
 
-@using (Html.BeginForm("Register", "Account"))
+@using (Html.BeginForm("ResetPassword", "Account"))
 {
     @Html.AntiForgeryToken()
     <div class="container">
@@ -11,25 +11,8 @@
                 <div class="col l6 m12 s12">
                     <h4>Register</h4>
                     <p>
-                        <a href="@Url.Action("Signin", "Account")" class="kn-smaller">Already registered?</a>
                         @* TODO: Style error messages *@
                         @Html.ValidationSummary()
-                        <div class="row kn-row-margin">
-                            <div class="input-field col s10">
-                                @*TODO: Custom HTML helper*@
-                                @Html.TextBoxFor(m => m.Data.FirstName, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.FirstName) })
-                            </div>
-                        </div>
-                        <div class="row kn-row-margin">
-                            <div class="input-field col s10">
-                                @Html.TextBoxFor(m => m.Data.LastName, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.LastName) })
-                            </div>
-                        </div>
-                        <div class="row kn-row-margin">
-                            <div class="input-field col s10">
-                                @Html.TextBoxFor(m => m.Data.EmailViewModel.Email, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.EmailViewModel.Email) })
-                            </div>
-                        </div>
                         <div class="row kn-row-margin">
                             <div class="input-field col s10">
                                 @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.Password) })
@@ -42,15 +25,12 @@
                         </div>
                         <div class="row kn-row-margin">
                             <div>
-                                <button class="btn waves-effect waves-light red darken-3" type="submit">Create my account</button>
+                                <button class="btn waves-effect waves-light red darken-3" type="submit">Reset my password</button>
                             </div>
                         </div>
                     </p>
                 </div>
             </div>
-            <p>
-                @Html.CheckBoxFor(m => m.Data.MarketingConsent)
-            </p>
 
         </div>
         <div class="col l6 m12 s12">
