Try to get all identity services via Autofac

--- a/MedioClinic/Views/Account/ForgotPassword.cshtml
+++ b/MedioClinic/Views/Account/ForgotPassword.cshtml
@@ -2,7 +2,7 @@
 
 @model MedioClinic.Models.PageViewModel<EmailViewModel>
 
-@using (Html.BeginForm("ForgotPassword", "Account"))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="container">
