--- a/MedioClinic/Views/Account/Register.cshtml
+++ b/MedioClinic/Views/Account/Register.cshtml
@@ -2,7 +2,7 @@
 
 @model MedioClinic.Models.PageViewModel<RegisterViewModel>
 
-@using (Html.BeginForm("Register", "Account"))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="container">
