--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -2,7 +2,7 @@
 
 @model MedioClinic.Models.PageViewModel<ResetPasswordViewModel>
 
-@using (Html.BeginForm("ResetPassword", "Account"))
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     <div class="container">
