Add logging & fix minor defects

--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -13,6 +13,8 @@
                     <p>
                         @* TODO: Style error messages *@
                         @Html.ValidationSummary()
+                        @Html.HiddenFor(m => m.Data.UserId)
+                        @Html.HiddenFor(m => m.Data.Token)
                         <div class="row kn-row-margin">
                             <div class="input-field col s10">
                                 @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.Password) })
