--- a/MedioClinic/Views/Account/Signin.cshtml
+++ b/MedioClinic/Views/Account/Signin.cshtml
@@ -35,7 +35,7 @@
                                 </div>
                             </div>
                         </div>
-                        <a href="@Url.Action("ResetPassword", "Account")" class="kn-smaller">Don't remember your password?</a>
+                        <a href="@Url.Action("ForgotPassword", "Account")" class="kn-smaller">Don't remember your password?</a>
                     </p>
 
                 </div>
