--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -7,36 +7,36 @@
     @Html.AntiForgeryToken()
     <div class="container">
         <div class="row">
-            <div class="section">
-                <div class="col l6 m12 s12">
-                    <h4>Register</h4>
-                    <p>
-                        @* TODO: Style error messages *@
-                        @Html.ValidationSummary()
-                        @Html.HiddenFor(m => m.Data.UserId)
-                        @Html.HiddenFor(m => m.Data.Token)
-                        <div class="row kn-row-margin">
-                            <div class="input-field col s10">
-                                @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.Password) })
-                            </div>
+            <h4>@Html.Localize("passreset.title")</h4>
+        </div>
+        <div class="row section">
+            <div class="col l6 m12 s12">
+                <p>
+                    @* TODO: Style error messages *@
+                    @Html.ValidationSummary()
+                    @Html.HiddenFor(m => m.Data.UserId)
+                    @Html.HiddenFor(m => m.Data.Token)
+                    <div class="row kn-row-margin">
+                        <div class="input-field col s10">
+                            @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.Password) })
                         </div>
-                        <div class="row kn-row-margin">
-                            <div class="input-field col s10">
-                                @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.ConfirmPassword, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.ConfirmPassword) })
-                            </div>
+                    </div>
+                    <div class="row kn-row-margin">
+                        <div class="input-field col s10">
+                            @Html.PasswordFor(m => m.Data.PasswordConfirmationViewModel.ConfirmPassword, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordConfirmationViewModel.ConfirmPassword) })
                         </div>
-                        <div class="row kn-row-margin">
-                            <div>
-                                <button class="btn waves-effect waves-light red darken-3" type="submit">Reset my password</button>
-                            </div>
+                    </div>
+                    <div class="row kn-row-margin">
+                        <div>
+                            <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("passreset.title")</button>
                         </div>
-                    </p>
-                </div>
+                    </div>
+                </p>
             </div>
+            <div class="col l6 m12 s12">
+                <img class="responsive-img kn-img-margin" src="@Url.Content("~/Content/Images/register-signin.jpg")">
+            </div>
+        </div>
 
-        </div>
-        <div class="col l6 m12 s12">
-            <img class="responsive-img kn-img-margin" src="assets/Sign-In%20photo/signinphoto.jpg">
-        </div>
     </div>
 }
