--- a/MedioClinic/Views/Account/Signin.cshtml
+++ b/MedioClinic/Views/Account/Signin.cshtml
@@ -6,42 +6,42 @@
 {
     @Html.AntiForgeryToken()
     <div class="container">
-        <div class="row">
-            <div class="section">
-                <div class="col l6 s12">
-                    <h4>Sign In to Your Account</h4>
-                    @Html.ValidationSummary()
-                    <p>
-                        <a href="@Url.Action("Register", "Account")" class="kn-smaller">New in Medio Clinic? Register now!</a>
-                        <div class="col s12">
-                            <div class="row kn-row-margin">
-                                <div class="input-field col s10">
-                                    @Html.TextBoxFor(m => m.Data.EmailViewModel.Email, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.EmailViewModel.Email) })
-                                </div>
-                            </div>
-                            <div class="row kn-row-margin">
-                                <div class="input-field col s10">
-                                    @Html.PasswordFor(m => m.Data.PasswordViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordViewModel.Password) })
-                                </div>
-                            </div>
-                            <div class="row kn-row-margin">
-                                <div class="input-field col s10">
-                                    @Html.CheckBoxFor(m => m.Data.StaySignedIn)
-                                </div>
-                            </div>
-                            <div class="row kn-row-margin">
-                                <div>
-                                    <button class="btn waves-effect waves-light red darken-3" type="submit">Continue</button>
-                                </div>
+        <div class="row section">
+            <h4>@Html.Localize("Views.Account.Signin.Heading")</h4>
+        </div>
+        <div class="row section">
+            <div class="col l6 m12 s12">
+                @Html.ValidationSummary()
+                <p>
+                    <a href="@Url.Action("Register", "Account")" class="kn-smaller">@Html.Localize("Views.Account.RegisterNow")</a>
+                    <div class="col s12">
+                        <div class="row kn-row-margin">
+                            <div class="input-field col s10">
+                                @Html.TextBoxFor(m => m.Data.EmailViewModel.Email, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.EmailViewModel.Email) })
                             </div>
                         </div>
-                        <a href="@Url.Action("ForgotPassword", "Account")" class="kn-smaller">Don't remember your password?</a>
-                    </p>
-
-                </div>
-                <div class="col l6 s12">
-                    <img class="responsive-img kn-img-margin" src="assets/Sign-In photo/590062300.jpg">
-                </div>
+                        <div class="row kn-row-margin">
+                            <div class="input-field col s10">
+                                @Html.PasswordFor(m => m.Data.PasswordViewModel.Password, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.PasswordViewModel.Password) })
+                            </div>
+                        </div>
+                        <div class="row kn-row-margin">
+                            <div class="input-field col s10">
+                                @Html.CheckBoxFor(m => m.Data.StaySignedIn)
+                                @Html.LabelFor(m => m.Data.StaySignedIn)
+                            </div>
+                        </div>
+                        <div class="row kn-row-margin">
+                            <div>
+                                <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("general.continue")</button>
+                            </div>
+                        </div>
+                    </div>
+                    <a href="@Url.Action("ForgotPassword", "Account")" class="kn-smaller">@Html.Localize("Views.Account.DontRememberPassword")</a>
+                </p>
+            </div>
+            <div class="col l6 m12 s12">
+                <img class="responsive-img kn-img-margin" src="@Url.Content("~/Content/Images/register-signin.jpg")">
             </div>
         </div>
     </div>
