Add support for avatar management

--- a/MedioClinic/Views/Profile/Index.cshtml
+++ b/MedioClinic/Views/Profile/Index.cshtml
@@ -1,3 +1,3 @@
-﻿@model MedioClinic.Models.PageViewModel<MedioClinic.Models.IViewModel>
+﻿@model MedioClinic.Models.PageViewModel<MedioClinic.Models.Profile.IUserViewModel>
 
 @Html.DisplayFor(m => m.Data)
