--- a/MedioClinic/Views/Shared/DisplayTemplates/PatientViewModel.cshtml
+++ b/MedioClinic/Views/Shared/DisplayTemplates/PatientViewModel.cshtml
@@ -1,6 +1,11 @@
 ﻿@model MedioClinic.Models.Profile.PatientViewModel
 
-@using (Html.BeginForm())
+@{ 
+    var controller = ViewContext.RouteData.Values.FirstOrDefault(value => value.Key.Equals("controller", StringComparison.OrdinalIgnoreCase)).Value.ToString();
+    var action = ViewContext.RouteData.Values.FirstOrDefault(value => value.Key.Equals("action", StringComparison.OrdinalIgnoreCase)).Value.ToString();
+}
+
+@using (Html.BeginForm(action, controller, FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     <div class="container">
@@ -8,90 +13,8 @@
             <h4>Patient's Profile Page</h4>
         </div>
         <div class="row section">
-                <p>@Html.Raw(ViewBag.Message)</p>
-            <div class="kn-profile-wrapper">
-                @* TODO: CSS *@
-                <div class="col s12 m4">
-                    <div class="kn-profile-infobox kn-text-center">
-                        @* TODO: Glyph *@
-                        <img src="assets/Sign-In photo/patientsprofile.jpg" alt="Ossip Zadkine" class="responsive-img" />
-                        <div class="row">
-                            <div class="col s12">
-                                <div class="row">
-                                    <div class="kn-margin-m kn-padding-m kn-text-medium">
-                                        @Html.DisplayFor(m => m.FirstName) @Html.DisplayFor(m => m.LastName)
-                                    </div>
-                                </div>
-                                @* TODO: Consents *@
-                                <div class="row">
-                                    <div class="kn-smaller">You are not subscribed to any newsletter.</div>
-                                </div>
-                                <div class="row">
-                                    <div class="kn-small">
-                                        <a href="@Url.Action("ForgotPassword", "Account")">Reset password</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col s12 m4">
-                    <div class="kn-profile-additional-info grey lighten-3">
-                        <div class="kn-row">
-                            <div class="col s12 m12">
-                                <h6 class="blue-grey-text text-lighten-2 kn-bold section">
-                                    General information
-                                </h6>
-                            </div>
-                            <div class="col s12 m6">
-                                <div>@Html.HiddenFor(m => m.Id)</div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.FirstName)</div>
-                                    <div>@Html.EditorFor(m => m.FirstName)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.LastName)</div>
-                                    <div>@Html.EditorFor(m => m.LastName)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.DateOfBirth)</div>
-                                    <div>@Html.EditorFor(m => m.DateOfBirth)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.Gender)</div>
-                                    <div>@Html.EditorFor(m => m.Gender)</div>
-                                </div>
-                            </div>
-                            <div class="col s12 m6">
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.City)</div>
-                                    <div>@Html.EditorFor(m => m.City)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.Street)</div>
-                                    <div>@Html.EditorFor(m => m.Street)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.EmailViewModel.Email)</div>
-                                    <div>@Html.EditorFor(m => m.EmailViewModel.Email)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.Phone)</div>
-                                    <div>@Html.EditorFor(m => m.Phone)</div>
-                                </div>
-                                <div class="kn-row">
-                                    <div class="kn-bold">@Html.DisplayNameFor(m => m.Nationality)</div>
-                                    <div>@Html.EditorFor(m => m.Nationality, "CountrySelector")</div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="kn-row">
-                            <button class="btn waves-effect waves-light red darken-3" type="submit" name="action">@Html.Localize("general.savechanges")</button>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
+            <p>@Html.Raw(ViewBag.Message)</p>
+            @Html.DisplayFor(m => m.CommonUserViewModel)
         </div>
     </div>
 }
