Document & refactor for review

--- a/MedioClinic/Views/Account/Signin.cshtml
+++ b/MedioClinic/Views/Account/Signin.cshtml
@@ -18,6 +18,7 @@
                         <div class="row kn-row-margin">
                             <div class="input-field col s10">
                                 @Html.TextBoxFor(m => m.Data.EmailViewModel.Email, new { @class = "validate", placeholder = Html.DisplayNameFor(m => m.Data.EmailViewModel.Email) })
+                                <p><small>(Note: If you changed your email address in your profile page, you should still use the original one.)</small></p>
                             </div>
                         </div>
                         <div class="row kn-row-margin">
