Implement avatar file type validation

--- a/MedioClinic/Views/Shared/DisplayTemplates/CommonUserViewModel.cshtml
+++ b/MedioClinic/Views/Shared/DisplayTemplates/CommonUserViewModel.cshtml
@@ -1,5 +1,6 @@
 ﻿@model MedioClinic.Models.Profile.CommonUserViewModel
 
+<div>@Html.ValidationSummary()</div>
 <div class="kn-profile-wrapper">
     <div class="col s12 m4">
         <div class="kn-profile-infobox kn-text-center">
