Get rid of models in most of identity results

--- a/MedioClinic/Views/Account/Signin.cshtml
+++ b/MedioClinic/Views/Account/Signin.cshtml
@@ -1,6 +1,6 @@
 ﻿@using MedioClinic.Models.Account
 
-@model MedioClinic.Models.PageViewModel<SigninViewModel>
+@model MedioClinic.Models.PageViewModel<SignInViewModel>
 
 @using (Html.BeginForm(new { ReturnUrl = Request.QueryString["ReturnUrl"] }))
 {
