Polish & comment code

--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -8,6 +8,7 @@
     <div class="container">
         <div class="row">
             <h4>@Html.Localize("passreset.title")</h4>
+            @Html.DisplayFor(m => m.UserMessage)
         </div>
         <div class="row section">
             <div class="col l6 m12 s12">
