--- a/MedioClinic/Views/Shared/UserMessage.cshtml
+++ b/MedioClinic/Views/Shared/UserMessage.cshtml
@@ -2,6 +2,7 @@
 
 <div class="container">
     <div class="row">
+        <h4>@Html.DisplayFor(m => m.Metadata.Title)</h4>
         @Html.DisplayFor(m => m.UserMessage)
     </div>
 </div>
