--- a/MedioClinic/Views/Account/ForgotPassword.cshtml
+++ b/MedioClinic/Views/Account/ForgotPassword.cshtml
@@ -21,7 +21,7 @@
                         </div>
                         <div class="row kn-row-margin">
                             <div>
-                                <button class="btn waves-effect waves-light red darken-3" type="submit" name="action">@Html.Localize("passreset.title")</button>
+                                <button class="btn waves-effect waves-light red darken-3" type="submit" name="action">@Html.Localize("PassReset.Title")</button>
                             </div>
                         </div>
                     </div>
