--- a/MedioClinic/Views/Account/ResetPassword.cshtml
+++ b/MedioClinic/Views/Account/ResetPassword.cshtml
@@ -7,7 +7,7 @@
     @Html.AntiForgeryToken()
     <div class="container">
         <div class="row">
-            <h4>@Html.Localize("passreset.title")</h4>
+            <h4>@Html.Localize("PassReset.Title")</h4>
             @Html.DisplayFor(m => m.UserMessage)
         </div>
         <div class="row section">
@@ -29,7 +29,7 @@
                     </div>
                     <div class="row kn-row-margin">
                         <div>
-                            <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("passreset.title")</button>
+                            <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("PassReset.Title")</button>
                         </div>
                     </div>
                 </p>
