--- a/MedioClinic/Views/Account/Signin.cshtml
+++ b/MedioClinic/Views/Account/Signin.cshtml
@@ -34,7 +34,7 @@
                         </div>
                         <div class="row kn-row-margin">
                             <div>
-                                <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("general.continue")</button>
+                                <button class="btn waves-effect waves-light red darken-3" type="submit">@Html.Localize("General.Continue")</button>
                             </div>
                         </div>
                     </div>
