--- a/MedioClinic/Views/Shared/EditorTemplates/CommonUserViewModel.cshtml
+++ b/MedioClinic/Views/Shared/EditorTemplates/CommonUserViewModel.cshtml
@@ -78,7 +78,7 @@
                 </div>
             </div>
             <div class="kn-row">
-                <button class="btn waves-effect waves-light red darken-3" type="submit" name="action">@Html.Localize("general.savechanges")</button>
+                <button class="btn waves-effect waves-light red darken-3" type="submit" name="action">@Html.Localize("General.SaveChanges")</button>
             </div>
         </div>
     </div>
