--- a/MedioClinic/Views/Shared/EditorTemplates/CommonUserViewModel.cshtml
+++ b/MedioClinic/Views/Shared/EditorTemplates/CommonUserViewModel.cshtml
@@ -4,12 +4,15 @@
 <div class="kn-profile-wrapper">
     <div class="col s12 m4">
         <div class="kn-profile-infobox kn-text-center">
+
+            @* Avatar support (begin) *@
             <div>
                 <img src="@Url.Content(Model.AvatarContentPath)" alt="@Model.FullName" class="responsive-img" />
             </div>
             <div>
                 @Html.TextBoxFor(m => m.AvatarFile, new { type = "file" })
             </div>
+            @* Avatar support (end) *@
 
             <div class="row">
                 <div class="col s12">
@@ -82,5 +85,4 @@
             </div>
         </div>
     </div>
-
 </div>
