--- a/MedioClinic/Views/Shared/EditorTemplates/DoctorViewModel.cshtml
+++ b/MedioClinic/Views/Shared/EditorTemplates/DoctorViewModel.cshtml
@@ -1,19 +1,3 @@
 ﻿@model MedioClinic.Models.Profile.DoctorViewModel
 
-@{
-    var controller = ViewContext.RouteData.Values.FirstOrDefault(value => value.Key.Equals("controller", StringComparison.OrdinalIgnoreCase)).Value.ToString();
-    var action = ViewContext.RouteData.Values.FirstOrDefault(value => value.Key.Equals("action", StringComparison.OrdinalIgnoreCase)).Value.ToString();
-}
-
-@using (Html.BeginForm(action, controller, FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.AntiForgeryToken()
-    <div class="container">
-        <div class="row">
-            <h4>Doctor's Profile Page</h4>
-        </div>
-        <div class="row section">
-            @Html.DisplayFor(m => m.CommonUserViewModel)
-        </div>
-    </div>
-}
+@Html.EditorFor(m => m.CommonUserViewModel)
